# mini-url

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
mini_url/: __init__.py  api.py  app.py  core.py  db.py  dtos.py  settings.py  web.py
tests/: conftest.py  test_api.py  test_core.py  test_web.py
